--- a/cameraTest/Base.lproj/Main.storyboard
+++ b/cameraTest/Base.lproj/Main.storyboard
@@ -16,17 +16,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello world" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a8E-ZH-MUJ">
-                                <rect key="frame" x="172" y="410" width="86" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a8E-ZH-MUJ">
+                                <rect key="frame" x="207" y="448" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" systemColor="systemGroupedBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hk1-8b-Pkk">
+                                <rect key="frame" x="30" y="790" width="354" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="Osb-GR-QhI"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="didTapButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="NYS-14-p5E"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ber-Mo-E9U">
+                                <rect key="frame" x="20" y="64" width="374" height="706"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hk1-8b-Pkk" secondAttribute="bottom" constant="20" id="Ae2-46-WtG"/>
+                            <constraint firstItem="ber-Mo-E9U" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="D6W-uL-yE9"/>
+                            <constraint firstItem="a8E-ZH-MUJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="GWX-tv-ZPz"/>
+                            <constraint firstItem="hk1-8b-Pkk" firstAttribute="top" secondItem="ber-Mo-E9U" secondAttribute="bottom" constant="20" id="IiO-8Y-7QT"/>
+                            <constraint firstItem="hk1-8b-Pkk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Y3p-Ru-Lfk"/>
+                            <constraint firstItem="a8E-ZH-MUJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h6L-Ls-TTh"/>
+                            <constraint firstItem="ber-Mo-E9U" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="iy7-Vg-nCE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ber-Mo-E9U" secondAttribute="trailing" constant="20" id="pXC-R8-3V7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hk1-8b-Pkk" secondAttribute="trailing" constant="30" id="tsx-Qt-nuG"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="button" destination="hk1-8b-Pkk" id="lvS-9U-7pE"/>
+                        <outlet property="imageView" destination="ber-Mo-E9U" id="2IF-PS-mCT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
